--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,17 +6,32 @@
 
 body {
   font-family: Roboto, sans-serif;
-  background-color: #212529;
-  color: aliceblue;
+  background-color:  aliceblue;
+  color: #212529;;
   height: 100vh;
   overflow: auto;
   margin: 10%;
 }
 
+.main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+h5 {
+  position: absolute;
+  top: 2vh;
+  right: 2vw;
+  font-style: italic;
+  color: #123350;
+  font-size: 10px;
+}
+
 .usernameform {
   width: 100%;
   /* max-width: 800px; */
-  color: rgb(255 255 255);
+  /* color: rgb(255 255 255); */
   font-weight: 500;
   margin-top: 10px;
 }
@@ -30,6 +45,8 @@ body {
   margin-bottom: 2rem;
   font-family: inherit;
   font-size: 1rem;
+  background-color: #123350;
+  color: #fff
 }
 
 .label-for-input {
@@ -38,7 +55,7 @@ body {
 }
 
 .searchinput::placeholder {
-  color: rgb(66 85 85);
+  color: #6c757d;
 }
 
 .searchinput:focus {
@@ -47,12 +64,11 @@ body {
 
 .profil-info {
   max-width: 800px;
-  background: #212529;
+  background: #123350;
   border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
-    0 15px 40px rgba(0 0 0 / 10%);
+    box-shadow: 0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
   display: flex;
-  padding: 0 1em;
+  padding: 2rem 1em;
   margin: 2rem 0;
   align-items: center;
 }
@@ -96,10 +112,14 @@ body {
   text-decoration: none;
   color: aliceblue;
   font-size: 1rem;
-  background-color: #212529;
+  /* background-color: #212529; */
   padding: 10px 0;
   margin: auto 0.5rem 0.5rem auto;
   display: inline-block;
+}
+
+.repos-link:visited {
+  color:blueviolet;
 }
 
 @media screen and (max-width: 425px) {
@@ -123,3 +143,4 @@ body {
     overflow: scroll;
   }
 }
+
