--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: Roboto, sans-serif;
-  background-color:  aliceblue;
-  color: #212529;;
+  background-color: aliceblue;
+  color: #212529;
   height: 100vh;
   overflow: auto;
   margin: 10%;
@@ -46,7 +46,7 @@ h5 {
   font-family: inherit;
   font-size: 1rem;
   background-color: #123350;
-  color: #fff
+  color: #fff;
 }
 
 .label-for-input {
@@ -63,10 +63,10 @@ h5 {
 }
 
 .profil-info {
-  max-width: 800px;
+  width: 100%;
   background: #123350;
   border-radius: 20px;
-    box-shadow: 0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   display: flex;
   padding: 2rem 1em;
   margin: 2rem 0;
@@ -93,6 +93,59 @@ h5 {
   margin-bottom: 2%;
 }
 
+.repo {
+  margin: 30px 0;
+  padding: 20px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.repo-name {
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.repo-description {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.stars {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.view-readme {
+  font-size: 14px;
+  text-decoration: underline;
+  color: #4885ed;
+}
+
+a {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+
+.div-for-repos {
+  width: 100%;
+  background: #123350;
+  border-radius: 20px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5em;
+  padding: 2rem 2em;
+  margin: 2rem 0;
+  /* align-items: center; */
+  color: #fff;
+}
+
+.repo-url {
+  font-size: 14px;
+  cursor: pointer;
+  font-style: italic;
+}
+
 .info-followers-repos {
   margin: 3% 0;
   display: flex;
@@ -101,7 +154,7 @@ h5 {
 }
 
 .info-followers-repos p {
- margin-right: 10px;
+  margin-right: 10px;
 }
 
 .info-followers-repos p strong {
@@ -119,7 +172,7 @@ h5 {
 }
 
 .repos-link:visited {
-  color:blueviolet;
+  color: blueviolet;
 }
 
 @media screen and (max-width: 425px) {
@@ -143,4 +196,3 @@ h5 {
     overflow: scroll;
   }
 }
-
