--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -9,7 +9,7 @@ body {
   background-color: aliceblue;
   color: #212529;
   height: 100vh;
-  overflow: auto;
+  overflow: scroll;
   margin: 10%;
 }
 
@@ -102,7 +102,7 @@ h5 {
 .repo-name {
   font-size: 20px;
   font-weight: 700;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 .repo-description {
